test/TestPhases/typechecker/invalid/funcallWithoutParens.blc
function f()() returns bool
    return false
end

@[EntryPoint]
activity Main () ()
    var x = f // ()
    await true
end